fix: aligned company and individual buttons

--- a/angular/projects/public-nrpti/src/app/records/records-list/search-filters/search-filters.component.scss
+++ b/angular/projects/public-nrpti/src/app/records/records-list/search-filters/search-filters.component.scss
@@ -53,6 +53,14 @@
   .label-single,
   .label-pair {
     max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  
+  .label-single {
+    align-items: flex-start;
+    padding-top: 1.5rem; // Align with the checkbox in label-pair
   }
 }
 
